//
//  SelectableCell.swift
//  Stepippo
//
//  Created by 村松龍之介 on 2019/04/14.
//  Copyright © 2019 Yasasii-kai. All rights reserved.
//

import UIKit

class SelectableCell: UITableViewCell {

    // MARK: - IBOutlet properties
    @IBOutlet weak var iconImage: UIImageView!
    @IBOutlet weak var titleLabel: UILabel!
    @IBOutlet weak var segmentedControl: UISegmentedControl!    
}
